# SoundLab_MobileAF

./: build.gradle  settings.gradle
app/src/main/cpp/: CMakeLists.txt  soundlab.cpp
app/src/main/cpp/FiltfiltOrderThreeButter/: FiltfiltOrderThreeButter.cpp  FiltfiltOrderThreeButter.h  FiltfiltOrderThreeButter_data.h  FiltfiltOrderThreeButter_initialize.cpp  FiltfiltOrderThreeButter_initialize.h  FiltfiltOrderThreeButter_internal_types.h  FiltfiltOrderThreeButter_rtwutil.cpp  FiltfiltOrderThreeButter_rtwutil.h  FiltfiltOrderThreeButter_terminate.cpp  FiltfiltOrderThreeButter_terminate.h  FiltfiltOrderThreeButter_types.h  anonymous_function.h  buildInfo.mat  eig.cpp  eig.h  eigStandard.cpp  eigStandard.h  filter.cpp  filter.h  filtfilt.cpp  filtfilt.h  insertionsort.cpp  insertionsort.h  introsort.cpp  introsort.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sparse.h  xdlaev2.cpp  xdlaev2.h  xdlahqr.cpp  xdlahqr.h  xdlanv2.cpp  xdsterf.cpp  (+9 more)
app/src/main/cpp/corr_score/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  corr_score.cpp  corr_score.h  corr_score_data.h  corr_score_initialize.cpp  corr_score_initialize.h  corr_score_rtw.bat  corr_score_rtw.mk  corr_score_rtw.rsp  corr_score_rtw_comp.rsp  corr_score_terminate.cpp  corr_score_terminate.h  corr_score_types.h  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
app/src/main/cpp/freq_score/: FFTImplementationCallback.cpp  FFTImplementationCallback.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  freq_score.cpp  freq_score.h  freq_score_data.h  freq_score_initialize.cpp  freq_score_initialize.h  freq_score_rtw.bat  freq_score_rtw.mk  freq_score_rtw.rsp  freq_score_rtw_comp.rsp  freq_score_terminate.cpp  freq_score_terminate.h  freq_score_types.h  gcGuiReport.mat  rtGetInf.cpp  rtGetInf.h  (+6 more)
(+48 files in other folders)
